@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redislabs</groupId>
-	<artifactId>spark-redis_2.12</artifactId>
-	<version>3.1.0-SNAPSHOT</version>
+	<artifactId>spark-redis_2.13</artifactId>
+	<version>4.0.0-SNAPSHOT</version>
 	<name>Spark-Redis</name>
 	<description>A Spark library for Redis</description>
 	<url>http://github.com/RedisLabs/spark-redis</url>
@@ -42,13 +42,38 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<scala.major.version>2.12</scala.major.version>
-		<scala.complete.version>${scala.major.version}.0</scala.complete.version>
-		<jedis.version>3.9.0</jedis.version>
-		<spark.version>3.2.1</spark.version>
+		<java.version>17</java.version>
+		<scala.major.version>2.13</scala.major.version>
+		<scala.complete.version>${scala.major.version}.15</scala.complete.version>
+		<jedis.version>5.2.0</jedis.version>
+		<spark.version>4.0.0-preview2</spark.version>
 		<plugins.scalatest.version>1.0</plugins.scalatest.version>
+		<extraJavaTestArgs>
+			-XX:+IgnoreUnrecognizedVMOptions
+			-Djavax.net.ssl.trustStorePassword=password
+			-Djavax.net.ssl.trustStore=./src/test/resources/tls/clientkeystore
+			-Djavax.net.ssl.trustStoreType=jceks
+			-Djdk.reflect.useDirectMethodHandle=false
+			-Dio.netty.tryReflectionSetAccessible=true
+			--add-modules=jdk.incubator.vector
+			--add-opens=java.base/java.lang=ALL-UNNAMED
+			--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+			--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+			--add-opens=java.base/java.io=ALL-UNNAMED
+			--add-opens=java.base/java.net=ALL-UNNAMED
+			--add-opens=java.base/java.nio=ALL-UNNAMED
+			--add-opens=java.base/java.util=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+			--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+			--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+			--add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+			--add-opens=java.base/sun.security.action=ALL-UNNAMED
+			--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+		</extraJavaTestArgs>
 	</properties>
+
+
 
 	<distributionManagement>
 		<snapshotRepository>
@@ -85,7 +110,7 @@
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
-				<version>3.4.6</version>
+				<version>4.9.1</version>
 				<configuration>
 					<scalaVersion>${scala.complete.version}</scalaVersion>
 					<javacArgs>
@@ -121,7 +146,7 @@
 			<plugin>
 				<groupId>org.scalastyle</groupId>
 				<artifactId>scalastyle-maven-plugin</artifactId>
-				<version>0.7.0</version>
+				<version>1.0.0</version>
 				<configuration>
 					<verbose>false</verbose>
 					<failOnWarning>false</failOnWarning>
@@ -153,7 +178,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.5.4</version>
+				<version>3.7.1</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
@@ -241,7 +266,7 @@
 					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
 					<junitxml>.</junitxml>
 					<filereports>WDF TestSuite.txt</filereports>
-					<argLine>-XX:MaxPermSize=256m -Xmx2g -Djavax.net.ssl.trustStorePassword=password -Djavax.net.ssl.trustStore=./src/test/resources/tls/clientkeystore -Djavax.net.ssl.trustStoreType=jceks</argLine>
+					<argLine>-ea -Xmx4g -Xss4m -XX:MaxMetaspaceSize=2g -XX:+IgnoreUnrecognizedVMOptions -Djavax.net.ssl.trustStorePassword=password -Djavax.net.ssl.trustStore=./src/test/resources/tls/clientkeystore -Djavax.net.ssl.trustStoreType=jceks -Djdk.reflect.useDirectMethodHandle=false -Dio.netty.tryReflectionSetAccessible=true --add-modules=jdk.incubator.vector --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argLine>
 					<tagsToExclude>com.redislabs.provider.redis.util.BenchmarkTest</tagsToExclude>
 				</configuration>
 				<executions>
@@ -369,7 +394,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.2.7</version>
                         <configuration>
                             <gpgArguments>
                                 <arg>--pinentry-mode</arg>
